--- a/src/login.css
+++ b/src/login.css
@@ -50,3 +50,14 @@
 .card:hover {
     transform: scale(1.05);
 }
+
+.button.is-primary2 {
+    background-color: #522C5D !important; /* Púrpura oscuro para botón primario */
+    border-color: #8174A0 !important;
+    color: white !important;
+    }
+
+.button.is-primary2:hover {
+    background-color: #2c0c35 !important; /* Color más oscuro al pasar el cursor */
+    border-color: #522C5D !important;
+    }
